# django-sonar

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_tests.py  setup.py
base/: asgi.py  settings.py  urls.py  wsgi.py
django_sonar/: __init__.py  apps.py  db_router.py  events.py  logging.py  mixins.py  urls.py  utils.py  views.py
django_sonar/core/: __init__.py  collectors.py  filters.py  parsers.py
django_sonar/management/commands/: clear_sonar_data.py
django_sonar/middlewares/: requests.py  requests_middleware.py
django_sonar/migrations/: 0001_initial.py  0002_add_query_count.py  0003_alter_sonarrequest_path.py
django_sonar/models/: __init__.py  sonar_data.py  sonar_request.py
django_sonar/panels/: __init__.py  base.py  builtins.py  registry.py
django_sonar/static/django-sonar/css/: django-sonar.css
django_sonar/static/django_sonar/css/: dark-theme.css  django-sonar.css
django_sonar/static/django_sonar/js/: sql-formatter.min.js
django_sonar/templates/django-sonar/auth/: login.html
django_sonar/templates/django-sonar/layouts/: auth.html  base.html
django_sonar/templates/django-sonar/requests/: index.html
django_sonar/templates/django_sonar/auth/: denied.html  login.html
django_sonar/templates/django_sonar/dumps/: index.html
django_sonar/templates/django_sonar/events/: index.html
django_sonar/templates/django_sonar/exceptions/: index.html
django_sonar/templates/django_sonar/home/: index.html
django_sonar/templates/django_sonar/layouts/: auth.html
django_sonar/templates/django_sonar/logs/: index.html
django_sonar/templates/django_sonar/panels/: test_events_detail.html  test_events_list.html
django_sonar/templates/django_sonar/queries/: detail.html  index.html
django_sonar/templates/django_sonar/requests/: detail.html  detail_dumps.html  detail_exception.html  detail_headers.html  detail_middlewares.html  detail_payload.html  detail_queries.html  detail_session.html  index.html  table.html
django_sonar/templates/django_sonar/signals/: index.html
django_sonar/templatetags/: __init__.py  sonar_badges.py
django_sonar/tests/: README.md  __init__.py  base.py  test_core_collectors.py  test_core_filters.py  test_core_parsers.py  test_db_router.py  test_events_and_logging.py  test_json_serialization.py  test_middleware_basic.py  test_middleware_data_capture.py  test_middleware_exclusions.py  test_middleware_helpers.py  test_middleware_requests.py  test_panel_views.py  test_panels_registry.py  test_template_tags.py  test_views_filtering.py
