[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django_sonar"
version = "0.1.1"
authors = [
    { name = "Metalogico", email = "michele.brandolin@gmail.com" },
]
description = "The missing debug tool for Django"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Framework :: Django',
    'Framework :: Django :: 4.0',
    'Framework :: Django :: 5.0',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.urls]
Homepage = "https://github.com/metalogico/django-sonar"
Issues = "https://github.com/metalogico/django-sonar/issues"