[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "django_sonar"
description = "The missing debug tool for Django, inspired by Telescope."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Metalogico", email = "michele.brandolin@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
  "Django>=4.2.9",
  "sqlparse>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["django_sonar"]

[tool.hatch.version]
path = "django_sonar/__init__.py"

[project.urls]
Homepage = "https://github.com/metalogico/django-sonar"
Issues = "https://github.com/metalogico/django-sonar/issues"
Download = "https://pypi.org/project/django-sonar/"