[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=45",
  "wheel",
  "setuptools-scm>=6.2",
]

[project]
name = "django_sonar"
description = "The missing debug tool for Django, inspired by Telescope."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Metalogico", email = "michele.brandolin@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
  "Django>=4.2.9",
  "sqlparse>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["django_sonar*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "django_sonar.VERSION"}

[project.urls]
Homepage = "https://github.com/metalogico/django-sonar"
Issues = "https://github.com/metalogico/django-sonar/issues"
Download = "https://pypi.org/project/django-sonar/"